# tensorrt-object-detection

./: CMakeLists.txt  README.md  a.sh  main.cpp
include/: bbox_util.h  bbox_util_gpu.h  detection.h  detection_output.h  pluginImplement.h  tensorNet.h
lib/opencv-3.4/include/opencv2/: cvconfig.h  opencv_modules.hpp
lib/opencv-3.4/lib/: libopencv_core.so.3.4  libopencv_highgui.so.3.4  libopencv_highgui.so.3.4.0  libopencv_imgcodecs.so.3.4  libopencv_imgproc.so.3.4  libopencv_videoio.so.3.4  libopencv_videoio.so.3.4.0
lib/tensorrt-5.0.2.6/include/: NvCaffeParser.h  NvInfer.h  NvInferPlugin.h  NvOnnxConfig.h  NvOnnxParser.h  NvUffParser.h  NvUtils.h
lib/tensorrt-5.0.2.6/lib/: libnvinfer.so.5  libnvinfer_plugin.so.5  libnvinfer_plugin.so.5.0.2  libnvparsers.so.5.0.2
model/: deploy.prototxt  refinedet_shape.txt  result.txt
src/: bbox_util.cpp  bbox_util.cu  detection.cpp  detection_output.cpp  pluginImplement.cpp  tensorNet.cpp
